--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -105,13 +105,13 @@
     <ClCompile Include="D3D12\D3DUtil.cpp" />
     <ClCompile Include="Models\External\DDSTextureLoader.cpp" />
     <ClCompile Include="Objects\ViewFrustum.cpp" />
-    <ClCompile Include="Render\DepthPass.cpp" />
-    <ClCompile Include="Render\DiffusePass.cpp" />
-    <ClCompile Include="Render\RenderCore.cpp" />
+    <ClCompile Include="Render\Passes\DepthPass.cpp" />
+    <ClCompile Include="Render\Passes\DiffusePass.cpp" />
+    <ClCompile Include="Render\Manager\Render.cpp" />
     <ClCompile Include="Render\Resources\RenderItem.cpp" />
     <ClCompile Include="Render\Resources\Skeleton.cpp" />
-    <ClCompile Include="Render\ShadowPass.cpp" />
-    <ClCompile Include="Render\SsaoPass.cpp" />
+    <ClCompile Include="Render\Passes\ShadowPass.cpp" />
+    <ClCompile Include="Render\Passes\SsaoPass.cpp" />
     <ClCompile Include="Serialize\LevelReader.cpp" />
     <ClCompile Include="Update\UpdateLights.cpp" />
     <ClCompile Include="Update\UpdateRenderAssets.cpp" />
@@ -123,9 +123,9 @@
     <ClCompile Include="Render\Resources\FrameResource.cpp" />
     <ClCompile Include="Build\PushGenericMesh.cpp" />
     <ClCompile Include="Render\Resources\Mesh.cpp" />
-    <ClCompile Include="Render\Passes\ShadowMap.cpp" />
+    <ClCompile Include="Render\Resources\ShadowMap.cpp" />
     <ClCompile Include="EngineApp.cpp" />
-    <ClCompile Include="Render\Passes\Ssao.cpp" />
+    <ClCompile Include="Render\Resources\Ssao.cpp" />
     <ClCompile Include="Render\Resources\StaticSamplers.cpp" />
     <ClCompile Include="Update\UpdateMainPass.cpp" />
     <ClCompile Include="Update\UpdateMaterialBuffers.cpp" />
@@ -140,7 +140,6 @@
     <ClInclude Include="D3D12\D3Dx12.h" />
     <ClInclude Include="Models\External\DDSTextureLoader.h" />
     <ClInclude Include="Objects\ViewFrustum.h" />
-    <ClInclude Include="Render\RenderCore.h" />
     <ClInclude Include="Render\Resources\Mesh.h" />
     <ClInclude Include="Render\Resources\Joint.h" />
     <ClInclude Include="Render\Resources\Skeleton.h" />
@@ -155,8 +154,8 @@
     <ClInclude Include="Render\Resources\FrameResource.h" />
     <ClInclude Include="Render\Resources\RenderItem.h" />
     <ClInclude Include="Render\Resources\Animation.h" />
-    <ClInclude Include="Render\Passes\ShadowMap.h" />
-    <ClInclude Include="Render\Passes\Ssao.h" />
+    <ClInclude Include="Render\Resources\ShadowMap.h" />
+    <ClInclude Include="Render\Resources\Ssao.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
