--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -101,6 +101,14 @@
     <ClCompile Include="Build\SetSSAORootSignature.cpp" />
     <ClCompile Include="Build\ImportTextures.cpp" />
     <ClCompile Include="Build\SerializeLevel.cpp" />
+    <ClCompile Include="Gui\GuiManager.cpp" />
+    <ClCompile Include="ImGui\imgui.cpp" />
+    <ClCompile Include="ImGui\imgui_demo.cpp" />
+    <ClCompile Include="ImGui\imgui_draw.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_dx12.cpp" />
+    <ClCompile Include="ImGui\imgui_impl_win32.cpp" />
+    <ClCompile Include="ImGui\imgui_tables.cpp" />
+    <ClCompile Include="ImGui\imgui_widgets.cpp" />
     <ClCompile Include="Objects\Camera.cpp" />
     <ClCompile Include="D3D12\D3DApp.cpp" />
     <ClCompile Include="D3D12\D3DUtil.cpp" />
@@ -137,6 +145,15 @@
     <ClCompile Include="Update\UpdateSSAO.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Gui\GuiManager.h" />
+    <ClInclude Include="ImGui\imconfig.h" />
+    <ClInclude Include="ImGui\imgui.h" />
+    <ClInclude Include="ImGui\imgui_impl_dx12.h" />
+    <ClInclude Include="ImGui\imgui_impl_win32.h" />
+    <ClInclude Include="ImGui\imgui_internal.h" />
+    <ClInclude Include="ImGui\imstb_rectpack.h" />
+    <ClInclude Include="ImGui\imstb_textedit.h" />
+    <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="Objects\Camera.h" />
     <ClInclude Include="D3D12\D3DApp.h" />
     <ClInclude Include="D3D12\D3DUtil.h" />
