--- a/OpenResearchEngine/imgui.ini
+++ b/OpenResearchEngine/imgui.ini
@@ -3,6 +3,21 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=828,315
-Size=550,680
+Pos=781,233
+Size=651,680
+
+[Window][Scene]
+Pos=1803,560
+Size=509,690
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
