--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -117,6 +117,8 @@
     <ClCompile Include="Render\Passes\DepthPass.cpp" />
     <ClCompile Include="Render\Passes\DiffusePass.cpp" />
     <ClCompile Include="Render\Manager\Render.cpp" />
+    <ClCompile Include="Render\Passes\GBufferPass.cpp" />
+    <ClCompile Include="Render\Resources\GBuffer.cpp" />
     <ClCompile Include="Render\Resources\MeshAnimationResource.cpp" />
     <ClCompile Include="Render\Resources\RenderItem.cpp" />
     <ClCompile Include="Render\Resources\Skeleton.cpp" />
@@ -161,6 +163,7 @@
     <ClInclude Include="Models\External\DDSTextureLoader.h" />
     <ClInclude Include="Objects\ViewFrustum.h" />
     <ClInclude Include="Render\Resources\Blendshapes.h" />
+    <ClInclude Include="Render\Resources\GBuffer.h" />
     <ClInclude Include="Render\Resources\Mesh.h" />
     <ClInclude Include="Render\Resources\Joint.h" />
     <ClInclude Include="Render\Resources\MeshAnimationResource.h" />
@@ -179,6 +182,7 @@
     <ClInclude Include="Render\Resources\Skinning.h" />
     <ClInclude Include="Render\Resources\ShadowMap.h" />
     <ClInclude Include="Render\Resources\SsaoMap.h" />
+    <ClInclude Include="Utilities\stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
