--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Render\Resources\MeshAnimationResource.cpp" />
     <ClCompile Include="Render\Resources\RenderItem.cpp" />
     <ClCompile Include="Render\Resources\RenderTextures.cpp" />
+    <ClCompile Include="Render\Resources\ShadowResources.cpp" />
     <ClCompile Include="Render\Resources\Skeleton.cpp" />
     <ClCompile Include="Render\Passes\ShadowPass.cpp" />
     <ClCompile Include="Render\Passes\SsaoPass.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Render\Resources\Joint.h" />
     <ClInclude Include="Render\Resources\MeshAnimationResource.h" />
     <ClInclude Include="Render\Resources\RenderTextures.h" />
+    <ClInclude Include="Render\Resources\ShadowResources.h" />
     <ClInclude Include="Render\Resources\Skeleton.h" />
     <ClInclude Include="Render\Resources\TransformNode.h" />
     <ClInclude Include="Serialize\LevelReader.h" />
